@@ -1,3 +1,8 @@
+2001-05-15 John R. Jackson <jrj@purdue.edu>
+
+	* restore-src/amidxtaped.c: Call tape_stat() instead of stat() to
+	  decide if an image is a file or a tape.
+
 2001-05-14 John R. Jackson <jrj@purdue.edu>
 
 	* client-src/amandad.c: Fix hang when the incoming packet size is
